--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -673,13 +673,15 @@ def circularSubarraySum(arr):
 ```
 
 
+
+
 ### 直方图的最大矩形面积
 
 [Largest Rectangular Area in a Histogram - GeeksforGeeks](https://www.geeksforgeeks.org/largest-rectangular-area-in-a-histogram-using-stack/)
 
 通过数组给定一个直方图，找到这个直方图的最大矩形面积
 
-一个简单的想法，对于每个直方图，我们分别在左右看是否有更大的直方图
+一个简单的想法，对于每个直方图，我们分别在左右看是否有更大的直方图，如果有更大的，就再加上当前直方图的面积。
 
 ```python
 def getMaxArea(arr):
@@ -738,11 +740,40 @@ def solve(arr):
         twidth = next[i] - prev[i] - 1
         maxArea = max(arr[i] * twidth, maxArea)
     return maxArea
-
 ```
 
 
+### 数组的下一个排列
 
+[31. 下一个排列 - 力扣（LeetCode）](https://leetcode.cn/problems/next-permutation/description/)
+
+基本思路是从后向前，找到第一个降序排序的元素 x，然后再从最后向后向前找到第一个比 x 大的元素 y，交换 x 和 y 之后，此时原本x对应的位置之后的元素均为降序排序，需要将其转为升序排序（用两个指针交换前后元素即可）
+
+```python
+def nextPermutation(nums: List[int]) -> None:
+	n = len(nums)
+	i, j = n - 2, n-1
+	while i >= 0 and nums[i] >= nums[j]:
+		i -= 1
+		j -= 1
+	# 从后向前全是升序，返回倒序
+	if i == -1:
+		nums.reverse()
+		return
+	k = n - 1
+	while k >= 0 and nums[i] >= nums[k]:
+		k -= 1
+	
+	nums[i], nums[k] = nums[k], nums[i]
+
+	# i 之后的需要升序排列，注意在调换完之后，i之后是降序排序转换一下即可
+	l = i + 1
+	r = n - 1
+	while l < r:
+		nums[l], nums[r] = nums[r], nums[l]
+		l += 1
+		r -= 1
+```
 
 ## 哈希问题
 
@@ -1513,12 +1544,45 @@ def kthSmallest(arr, l, r, k):
     print("Index out of bound")
 ```
 
-### 在循环移位后的排序数组中搜索
+### 在旋转后的排序数组中搜索
+
+[33. 搜索旋转排序数组 - 力扣（LeetCode）](https://leetcode.cn/problems/search-in-rotated-sorted-array/)
 
 对于一个排好序的数组，如果进行了部分循环移位，在这种数组进行搜索
 
 1、使用两次二分搜索，第一次搜索最小值的位置，再根据最小值的位置进行二分搜索
 2、在上面搜索最小值时，已经用了这样的原理，即mid左侧或者右侧的数组必定有一侧是排好序的，如对于左侧，只要 `arr[low]<arr[mid]` 那么就是排好序的，如果key落在`arr[low]` 和 `arr[high]` 这个范围之内，就在左侧找，反之就在右侧找。 
+
+```python
+def search(self, arr: List[int], target: int) -> int:
+	n = len(arr)
+	l, r = 0, n - 1
+
+	while l < r:
+		mid = l + (r - l) // 2
+
+		if arr[mid] == target:
+			return mid   
+		if arr[l] == target:
+			return l
+		if arr[r] == target:
+			return r   
+
+		if arr[l] < arr[mid]:  # 如果左侧排好序
+			if target > arr[mid] or target < arr[l]:
+				l = mid + 1
+			else:
+				r = mid - 1
+		else:    # 右侧排好序
+			if target < arr[mid] or target > arr[r]:
+				r = mid - 1
+			else:
+				l = mid + 1
+	
+	if arr[l] == target:  # 处理只有一个元素的情况
+		return l
+	return -1
+```
 
 
 ### 在三个排好序的数组中找到最相近的数
@@ -3031,11 +3095,11 @@ def maxSlidingWindow(arr, k):
     ans = []
     window = SortedList()
 
-    # Initialize the window with the first k elements
+    # 初始化一个窗口
     for i in range(k):
-        window.add((-arr[i], i))  # Use negative value for max-heap behavior
+        window.add((-arr[i], i))  # 最大堆
 
-    # The maximum element in the first window
+    # 获取最大值对应的
     ans.append(-window[0][0])
 
     # Process the remaining elements
@@ -3113,6 +3177,43 @@ def printFirstNegativeIntegar(arr, n, k):
         print(0)
     else:
         print(arr[Di[0]])
+```
+
+
+### 最小覆盖子串
+
+[76. 最小覆盖子串 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-window-substring/)
+
+这里需要统计当前滑动窗口内的字符是否满足目标字符串的构成，如果一个个比较，会很慢，可以用一个变量设置为目标字符串元素的种类数，这样如果第一次元素数相等，种类数减一，如果种类数为0，则证明已经覆盖了。
+
+在求最小字串时，如果同时移动左右指针，会很麻烦，不如先确定右边界，如果窗口内包含了所有的元素再调整左边界。
+
+```python
+def solve(s, t):
+    target = dict(Counter(t))
+    window = {}
+    for key in target:
+        window[key] = 0
+    cnt = len(target)   # 元素的种类数
+    left, right = -1, len(s)
+    l = 0
+    for r, c in enumerate(s):  # 遍历右端
+        if c in window:
+            window[c] += 1
+            # 如果滑动窗口内已有相同数量的对应元素
+            if window[c] == target[c]:  
+                cnt -= 1
+        while cnt==0:  # cnt 为0，表示包含了所有的元素
+            if r - l < right - left:
+                right, left = r, l
+            if s[l] in window:
+                window[s[l]] -= 1
+                if window[s[l]] < target[s[l]]:
+                    cnt += 1
+            l += 1
+    if left < 0: return ""
+
+    return s[left: right + 1]
 ```
 
 
@@ -3284,7 +3385,6 @@ def print_util(str):
     
     return strs
 
-
 def print_all_strings(s):
     strs = print_util(s)
     for i in strs:
@@ -3422,7 +3522,26 @@ def findPermutation(s):
 
 [Longest Palindromic Substring - GeeksforGeeks](https://www.geeksforgeeks.org/longest-palindromic-substring/)
 
-遍历字符串的每个位置 `i`，以 `i` 为中心向两边扩展统计回文字符串的长度。
+遍历字符串的每个位置 `i`，以 `i` 为中心向两边扩展统计回文字符串的长度，以及以 `i` 和 `i+1` 为中心的回文字符串长度。
+
+```python
+def longestPalindrome(s: str) -> str:
+    start, maxLen = 0, 1
+    n = len(s)
+    for i in range(n):
+        for j in range(2):
+            low, high = i, i + j
+
+            while low >= 0 and high < n and s[low] == s[high]:
+                currLen = high - low + 1
+                if currLen > maxLen:
+                    maxLen = currLen
+                    start = low
+                low -= 1
+                high += 1
+        
+    return s[start: start+maxLen]
+```
 
 
 ### 回文字符串的最小切割
@@ -3727,6 +3846,42 @@ def allPalindromicPerms(s):
 [Check if a string is a scrambled form of another string - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-string-is-a-scrambled-form-of-another-string/)
 
 
+### 合法的IP地址
+
+[93. 复原 IP 地址 - 力扣（LeetCode）](https://leetcode.cn/problems/restore-ip-addresses/)
+
+合法的IP地址需要满足每一部分的值小于255，同时没有前导0。
+
+```python
+def restoreIpAddresses(s: str) -> List[str]:
+	n = len(s)
+	def dfs(s, ans, res, idx, depth):
+
+		if idx == n and depth == 4:
+			ans.append(res[:])
+			return
+
+		if n - idx > 3 * (4-depth):  # 如果剩下的元素太多，就无法构成
+			return
+		temp = ""
+		for i in range(idx, n):
+			if temp == "0":  # 如果temp为"0"就不要继续了
+				break
+			
+			temp += s[i]
+			if int(temp) <= 255:
+				res.append(temp)
+				dfs(s, ans, res, i+1, depth+1)
+				res.pop()
+			else:
+				break
+	
+	ans = []
+	dfs(s, ans, [], 0, 0)
+	ans = [".".join(a) for a in ans]
+	return ans
+```
+
 ### 判断一句话能否被给定词表分解
 
 [Word Break - GeeksforGeeks](https://www.geeksforgeeks.org/word-break-problem-dp-32/)
@@ -4021,6 +4176,28 @@ def min_word_break(s, dict):
 ```
 
 
+### 最大数问题
+
+[179. 最大数 - 力扣（LeetCode）](https://leetcode.cn/problems/largest-number/)
+
+将一组非负整数自由组合排成最大数，注意对于前缀相同的非负整数难以判断谁放在前面比较好。为了解决这个问题，直接在排序时定义，如果 a 在前面比 b 在前面大，那就把 a 放在前面。
+
+```python
+def largestNumber(nums: List[int]) -> str:
+	strs = [str(n) for n in nums]
+
+	def cmp(a, b):
+		if a + b > b + a:
+			return -1
+		elif a + b < b + a:
+			return 1
+		else:
+			return 0
+	strs.sort(key=functools.cmp_to_key(cmp))
+	if strs[0] == "0":
+		return "0"
+	return "".join(strs)
+```
 
 ### 词搜索
 
@@ -5408,7 +5585,86 @@ def maxSumRectangle(mat):
 
 2、在入栈时，将元素送入queue2的队列，将queue1中的所有元素送入queue2中，交换queue1和queue2；出栈时，直接从queue1出队列即可
 
+```python
+class MyStack:
+    def __init__(self):
+        self.queue1 = deque()
+        self.queue2 = deque()
+        self.isNowQueue1 = True
+
+    def push(self, x):
+        if self.isNowQueue1:
+            self.queue1.append(x)
+        else:
+            self.queue2.append(x)
+    
+    def empty(self):
+        return len(self.queue1) == 0 and len(self.queue2) == 0
+
+    def pop(self):
+        if self.empty():
+            return None
+        if self.isNowQueue1:
+            while len(self.queue1) > 1:
+                v = self.queue1.popleft()
+                self.queue2.append(v)
+            v = self.queue1.popleft()
+            self.isNowQueue1 = False
+        else:
+            while len(self.queue2) > 1:
+                v = self.queue2.popleft()
+                self.queue1.append(v)
+            v = self.queue2.popleft()
+            self.isNowQueue1 = True
+        return v
+    
+    def top(self):
+        if self.empty():
+            return None
+        if self.isNowQueue1:
+            while len(self.queue1) > 1:
+                v = self.queue1.popleft()
+                self.queue2.append(v)
+            v = self.queue1[0]
+        else:
+            while len(self.queue2) > 1:
+                v = self.queue2.popleft()
+                self.queue1.append(v)
+            v = self.queue2[0]
+        return v
+```
+
 如果只有一个队列，当第一个元素到来时，将元素送入队列，当第二个元素到来时，直接塞进去，但是再将第一个元素送入，将原本的第一个元素弹出
+
+单队列实现
+
+```python
+class MyStack:
+    def __init__(self):
+        self.queue = deque()
+
+    def push(self, x):
+        n = len(self.queue)
+        self.queue.append(x)
+        for i in range(n):
+            self.queue.append(self.queue.popleft())
+        
+    
+    def empty(self):
+        return len(self.queue) == 0
+
+    def pop(self):
+        if self.empty():
+            return None
+        v = self.queue.popleft()
+        return v
+    
+    def top(self):
+        if self.empty():
+            return None
+        return self.queue[0]
+```
+
 
 
 ### 使用优先队列实现栈
@@ -5416,6 +5672,84 @@ def maxSumRectangle(mat):
 [geeksforgeeks.org/implement-stack-using-priority-queue-or-heap/](https://www.geeksforgeeks.org/implement-stack-using-priority-queue-or-heap/)
 
 入栈时，不仅让元素入队列，还加上元素的序号，如第一个元素 a 以 `(0, a)` 的方式入队列，由于python中没有最大堆，所以可以在序号前加上负号，来让最后一个元素优先出队列。
+
+### 基础计算器
+
+下面实现了一个支持加减乘除的计算器，还支持括号
+
+使用两个栈分别保存数字和操作符，只要操作符栈顶元素的优先级大于当前操作符的优先级并且数字栈还有足够的元素就计算。遇到左括号就保存，遇到右括号就计算。
+
+```python
+def solve(s):
+    st = []
+    dst = []
+    num = 0
+    lastNum = False
+    lastLeft = True
+    s = "(" + s + ")"
+
+    def cal():   # 直接计算
+        op = st.pop()
+        num2 = dst.pop()
+        num1 = dst.pop()
+        if op == "+":
+            return num1 + num2
+        elif op == "-":
+            return num1 - num2
+        elif op == "^":
+            return num1 ** num2
+        elif op == "*":
+            return num1 * num2
+        elif op == "/":
+            return num1 // num2
+
+    def prior(op):
+        if op == "^":
+            return 3
+        elif op == "*" or op == "/":
+            return 2
+        elif op == "+" or op == "-":
+            return 1
+        else:
+            return -1
+
+    for i in range(len(s)):
+        c = s[i]
+        if c.isdigit():
+            num = 10 * num + int(c)
+            lastNum = True
+            lastLeft = False
+        else:
+            if c == " ":
+                continue
+            else:
+                if lastNum:   # 如果之前是数字就把结果保存下来
+                    dst.append(num)
+                    num = 0
+                if c == '(':
+                    st.append('(')
+                    lastLeft = True
+                elif c == ')':
+                    while st[-1] != "(":
+                        res = cal()
+                        dst.append(res)
+                    st.pop()
+                    lastLeft = False
+                else:
+                    if c == "-" and lastLeft:
+                        dst.append(0)  # 处理负号为单操作符时的情况
+
+                    while len(dst) >= 2 and prior(st[-1]) >= prior(c):
+                        res = cal()
+                        dst.append(res)
+                    st.append(c)
+                    lastLeft = False
+                    
+                lastNum = False
+    return dst[-1]
+```
+
+对于不包含括号的可以参考：[227. 基本计算器 II - 力扣（LeetCode）](https://leetcode.cn/problems/basic-calculator-ii/)
 
 
 ### 表达式互转
@@ -5432,6 +5766,45 @@ def maxSumRectangle(mat):
 [Prefix to Postfix Conversion - GeeksforGeeks](https://www.geeksforgeeks.org/prefix-postfix-conversion/)
 
 [Postfix to Prefix Conversion - GeeksforGeeks](https://www.geeksforgeeks.org/postfix-prefix-conversion/)
+
+
+### 最小栈
+
+[155. 最小栈 - 力扣（LeetCode）](https://leetcode.cn/problems/min-stack/)
+
+在push的时候用一个栈保存目前最小的值，在pop时如果pop的值和最小栈中的栈顶元素相等时，需要也pop最小栈。
+
+```python
+class MinStack:
+    def __init__(self):
+        self.stack1 = []
+        self.stack2 = []
+
+    def push(self, x):
+        self.stack1.append(x)
+        if len(self.stack2) == 0:
+            self.stack2.append(x)
+        else:
+            if x <= self.stack2[-1]:
+                self.stack2.append(x)
+    
+    def empty(self):
+        return len(self.stack1) == 0
+    
+    def top(self):
+        return self.stack1[-1]
+    
+    def getMin(self):
+        return self.stack2[-1]
+
+    def pop(self, x):
+        if self.empty():
+            return None
+        v = self.stack1.pop()
+        if v == self.getMin():
+            self.stack2.pop()
+        return v
+```
 
 ### 翻转栈
 
@@ -5500,6 +5873,35 @@ class LinkedList:
             prev = curr
             curr = next
         self.head = prev
+```
+
+
+### 移掉K位数字
+
+[402. 移掉 K 位数字 - 力扣（LeetCode）](https://leetcode.cn/problems/remove-k-digits/solutions/484940/yi-diao-kwei-shu-zi-by-leetcode-solution/)
+
+这里的K位是按顺序移除的k个数字，不需要连续
+
+解决方法：将每位数字压入栈中，如果当前数字小于栈顶数字就从栈顶移除一个数字
+
+```python
+def removeKdigits(num: str, k: int) -> str:
+    if len(num) == k: return "0"
+    stack = []
+    for i in range(len(num)):
+        # 栈顶元素较大删除栈顶元素
+        while k and len(stack) > 0 and stack[-1] > num[i]:
+            stack.pop()
+            k -= 1
+        stack.append(num[i])
+    # 还没删除k个元素，继续删除
+    while k > 0:
+        stack.pop()
+        k -= 1
+    
+    res = "".join(stack).lstrip("0")
+    if res == "": res = "0"
+    return res
 ```
 
 
@@ -6377,31 +6779,112 @@ def reverse_r(head):
     return prev.prev
 ```
 
+### 翻转一定范围内的链表
+
+[92. 反转链表 II - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-linked-list-ii/description/)
+
+假设范围为1-based索引，设置一个dummy处理需要翻转头节点的情况
+
+```python
+def solve(head: ListNode, left, right):
+    dummy = ListNode(-1)
+    dummy.next = head
+    node = dummy
+
+    for i in range(left-1):
+        node = node.next
+    i = left-1
+    prev, curr, next = None, node.next, None
+    while i <= right-1:
+        next = curr.next
+        curr.next = prev
+        prev = curr
+        curr = next
+        i += 1
+    node.next = prev
+    if next is not None:
+        while node.next is not None:
+            node = node.next
+        node.next = next
+    return dummy.next
+```
 
 
-### 判断环的节点数
+### k翻转链表
+
+[25. K 个一组翻转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
+
+每k个元素翻转一次链表
+
+```python
+def reverseKGroup(head, k):
+	dummy = ListNode(-1)
+	dummy.next = head
+	count = 0
+	curr, prev, next = head, dummy, None
+	while head is not None:
+		count += 1
+		head = head.next
+	
+	while count >= k:
+		for i in range(k-1):
+			next = curr.next
+			curr.next = next.next
+			next.next = prev.next
+			prev.next = next
+		
+		prev = curr
+		curr = prev.next
+		count -= k
+	return dummy.next
+```
+
+
+### 环形链表
+
+[142. 环形链表 II - 力扣（LeetCode）](https://leetcode.cn/problems/linked-list-cycle-ii/)
 
 [Find length of loop/cycle in given Linked List - GeeksforGeeks](https://www.geeksforgeeks.org/find-length-of-loop-in-linked-list/)
 
-用快慢指针，如果快慢指针相遇了，只移动慢指针，并且计算慢指针的移动次数，快慢指针再次相遇时，慢指针移动次数即为环的节点数
+判断环是否存在，使用快慢指针，快指针一次移动两次，慢指针一次移动一次，如果快慢指针相遇，则存在环
+
+判断环的起点：先用快慢指针判断是否存在环，假设环的起点为 x，环的大小为r，快慢指针相遇在 y 处，则快指针走了 `x+k*r+y`，慢指针走了 `x+y` 步，由于快指针每次移动两次，则有`k*r + x + y = 2 (x + y)`，则有慢指针实际走了 `k * r` 步。慢指针每次走到起点时的步数为 `k*r + x` ，已经走了 `k*r` 步了，只需要再走 `x` 步即可，因此只需要用一个指针指向头节点，两个指针每次走一步，相遇的地方即为环的起点。
+
+```python
+def solve(head):
+    slow, fast = head, head
+    has_circular = False
+    while fast and fast.next:
+        fast = fast.next.next
+        slow = slow.next
+        if slow == fast:
+            has_circular = True
+            break
+    if not has_circular:
+        return None
+    
+    fast = head
+    while slow != fast:
+        slow = slow.next
+        fast = fast.next
+
+    return slow
+```
+
+判断环的节点数：如果快慢指针相遇了，只移动慢指针，并且计算慢指针的移动次数，快慢指针再次相遇时，慢指针移动次数即为环的节点数
 
 ```python
 def countNodesInLoop(head):
-        
 	slow = head
 	fast = head
-
 	cnt = 0
 	flag = False
-
 	while slow is not None and fast is not None and fast.next is not None:
 		slow = slow.next
 		if not flag:
 			fast = fast.next.next
-		
 		if flag:
 			cnt += 1
-
 		if slow == fast:
 			if not flag:
 				flag = True
@@ -6410,6 +6893,160 @@ def countNodesInLoop(head):
 	return cnt
 ```
 
+
+### 相交链表
+
+[160. 相交链表 - 力扣（LeetCode）](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/)
+
+一种方法是先统计两个链表的长度，然后先遍历较长的链表，直到两个指针距离尾部的长度相等，然后一起遍历即可。
+
+第二种方法不直接统计两个链表的长度，而是隐含的让两个指针都经过两个链表，具体方法如下
+
+1、让两个指针指向链表的头节点
+2、两个指针向后遍历，如果元素相等就返回找到的交点
+3、在遍历时，大概率会先遍历到尾部，到尾部的指针指向另一个链表的头节点，这样当两个指针都重新指向另一个链表的时候，两个指针距离尾部的距离相等
+4、如果能找到就返回节点，找不到则两个指针会同时指向None，循环结束
+
+### 重排链表
+
+[143. 重排链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reorder-list/)
+
+将链表 L0 → L1 → … → Ln - 1 → Ln  重排为 L0 → Ln → L1 → Ln - 1 → L2 → Ln - 2 → …
+
+这里分为三步：首先是找到链表的中点（快慢指针,），然后翻转另一半的链表，最后将翻转后的链表和原本的链表合并
+
+```python
+def rearrange(node: Node):
+    slow, fast = node, node
+    # 需要判断 fast.next.next，否则当只有两个元素的时候会出现问题
+    while fast.next is not None and fast.next.next is not None:
+        slow = slow.next
+        fast = fast.next.next
+
+    def reverse(head: Node):
+        prev, curr, next = None, head, None
+        while curr is not None:
+            next = curr.next
+            curr.next = prev
+            prev = curr
+            curr = next
+        return prev
+    
+    last_half = reverse(slow.next)
+    slow.next = None   # 注意将其后序置为None
+    head = node
+    while head is not None:
+        temp = head.next
+        if last_half is not None:
+            head.next = last_half
+            last_half = last_half.next
+            head.next.next = temp
+            head = temp
+        else:
+            break
+```
+
+还有另一种方法，先把所有的节点拿出来放在列表中，然后再排列
+
+```python
+def solve(node):
+    arr = []
+    while node is not None:
+        arr.append(node)
+        node = node.next
+    
+    i = 0
+    j = len(arr) - 1
+
+    while i < j:
+        arr[i].next = arr[j]
+        i += 1
+        if i == j:
+            break
+        arr[j].next = arr[i]
+        j -= 1
+    arr[i].next = None  # 处理中间的节点
+```
+
+
+### 判断链表是否回文
+
+[234. 回文链表 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-linked-list/description/)
+
+先使用快慢指针找到链表中点，然后逆转中点之后的链表，和前面的做对比
+
+```python
+def solve(head):
+
+    slow, fast = head, head.next  # fast 先走一步，处理元素为2时的情况
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+    
+    def reverse_list(head):
+        prev, curr, next = None, head, None
+        while curr is not None:
+            next = curr.next
+            curr.next = prev
+            prev = curr
+            curr = next
+        return prev
+    
+    mid = reverse_list(slow.next)
+    slow.next = None
+
+    p1, p2 = head, mid
+    while p1 and p2:
+        if p1.val != p2.val:
+            return False
+        p1 = p1.next
+        p2 = p2.next
+    return True
+```
+
+### 链表的归并排序
+
+[148. 排序链表 - 力扣（LeetCode）](https://leetcode.cn/problems/sort-list/description/)
+
+```python
+def sort(node):
+    def merge(l1: Node, l2: Node):
+        head = Node(-1)   # 一个虚拟节点可以避免许多判断
+        node = head
+        while l1 is not None and l2 is not None:
+            if l1.val < l2.val:
+                node.next = l1
+                l1 = l1.next
+            else:
+                node.next = l2
+                l2 = l2.next
+            node = node.next
+        
+        if l1 is not None:
+            node.next = l1
+        if l2 is not None:
+            node.next = l2
+        return head.next
+
+    def _solve(head):
+        if head.next is None:
+            return head
+
+        slow, fast = head, head
+        # 这里需要判断 fast.next.next，否则两个节点分不开，或者fast先走一步
+        while fast.next is not None and fast.next.next is not None:
+            fast = fast.next.next
+            slow = slow.next
+        high = slow.next
+        slow.next = None
+        n1 = _solve(head)
+        n2 = _solve(high)
+        n = merge(n1, n2)
+        return n
+
+    head = _solve(node)
+    return head
+```
 
 
 ### 链表的快速排序
@@ -6480,6 +7117,145 @@ def quickSort(head):
 ```
 
 
+### 删除链表倒数第N个节点
+
+[19. 删除链表的倒数第 N 个结点 - 力扣（LeetCode）](https://leetcode.cn/problems/remove-nth-node-from-end-of-list/description/)
+
+考虑使用双指针，使用一个虚拟节点作为前置，用来处理需要删除头节点的情况
+
+先用一个指针移动N次，之后另一个指针指向头节点，两个指针同时移动，直到先走的指针到达尾部，此时两个指针都走了 K-N 步，后走的指针距离尾部正好N个节点
+
+```python
+def removeNthFromEnd(head, n):
+	dummy = ListNode(-1)
+	dummy.next = head
+	slow, fast = dummy, dummy
+	for i in range(n+1):
+		fast = fast.next
+	
+	while fast is not None:
+		fast = fast.next
+		slow = slow.next
+	
+	slow.next = slow.next.next
+	return dummy.next
+```
+
+
+### 旋转链表
+
+[61. 旋转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/rotate-list/description/)
+
+先找到尾节点，并且计算链表长度 n，将尾节点和头节点相连，从头节点向后移动 n- k次，最终断开得到旋转 k 次后的节点
+
+```python
+def solve(head, k):
+    if head is None and k == 0:
+        return head
+    tail = head
+    count = 1
+    while tail.next is not None:
+        count += 1
+        tail = tail.next
+    
+    k = k % count
+    if k == 0:
+        return head
+    
+    tail.next = head
+    p = head
+    prev = None
+    for i in range(count - k):  # 向后访问count-k
+        prev = p
+        p = p.next
+    prev.next = None   # 断开节点
+    return p
+```
+
+### 两两交换节点
+
+[24. 两两交换链表中的节点 - 力扣（LeetCode）](https://leetcode.cn/problems/swap-nodes-in-pairs/description/)
+
+
+是 k 翻转 k = 2 时的简化版本
+
+```python
+def solve(head):
+    prev = dummy = ListNode(-1)
+    dummy.next = head
+
+    curr, next = head, None
+
+    while curr:
+        next = curr.next
+        if next is None:   # 处理奇数个节点的最后一个节点
+            break
+        prev.next = next   # prev.next 指向 next(2)
+        curr.next = next.next   # 保存下一个状态
+        prev = curr             # prev指向curr (1)
+        next.next = curr        # next (2) 指向 (1)
+        curr = curr.next        # curr 移动到下一位 (3)
+    return dummy.next
+```
+
+
+### 奇偶链表
+
+[328. 奇偶链表 - 力扣（LeetCode）](https://leetcode.cn/problems/odd-even-linked-list/description/)
+
+用两个指针分别指向第一个节点（第一个奇数索引）和第二个节点（第一个偶数索引），然后奇数索引指针获取所有的奇数索引，偶数索引指针获取所有的偶数索引，这里需要额外用一个指针保存最开始的偶数索引，最后奇数索引后面加上最开始的偶数索引
+
+```python
+def solve(head):
+    if head is None:
+        return head
+    odd = head
+    even = head.next
+    evenHead = even
+    
+    while even and even.next:
+        odd.next = odd.next.next
+        even.next = even.next.next
+
+        odd = odd.next
+        even = even.next
+    
+    odd.next = evenHead
+    return head
+```
+
+
+### 带随机指针的链表
+
+[138. 随机链表的复制 - 力扣（LeetCode）](https://leetcode.cn/problems/copy-list-with-random-pointer/description/)
+
+用一个字典保存所有的节点，再在该字典设置下一个和随机指针
+
+```python
+def copyRandomList(head):
+	if head is None:
+		return head
+	nodes = {}
+	p = head
+	while p is not None:
+		tmp = Node(p.val)
+		nodes[p] = tmp
+		p = p.next
+	
+	cur = head
+	while cur is not None:
+		if cur.next is None:
+			nodes[cur].next = None
+		else:
+			nodes[cur].next = nodes[cur.next]
+		if cur.random is None:
+			nodes[cur].random = None
+		else:
+			nodes[cur].random = nodes[cur.random]
+		cur = cur.next
+	return nodes[head]
+```
+
 ## 树
 
 ### 四种遍历
@@ -6537,12 +7313,10 @@ def postorder_traversal(root: Node):
 def levelOrder(root):
     if root is None:
         return []
-
-    # Create an empty queue for level order traversal
+    
     q = deque()
     res = []
-
-    # Enqueue Root
+    
     q.append(root)
     currLevel = 0
 
@@ -6551,15 +7325,13 @@ def levelOrder(root):
         res.append([])
 
         for _ in range(len_q):
-            # Add front of queue and remove it from queue
+            # 获得当前节点
             node = q.popleft()
             res[currLevel].append(node.data)
-
-            # Enqueue left child
+            
             if node.left is not None:
                 q.append(node.left)
-
-            # Enqueue right child
+                
             if node.right is not None:
                 q.append(node.right)
         currLevel += 1
@@ -6568,11 +7340,290 @@ def levelOrder(root):
 ```
 
 
-### Morris 遍历
+### 特殊遍历
+
+#### Morris 遍历
 
 [Morris traversal for Inorder - GeeksforGeeks](https://www.geeksforgeeks.org/inorder-tree-traversal-without-recursion-and-without-stack/)
 
-一种时间复杂度为1的遍历，
+一种空间复杂度为1的遍历，利用树中存在的大量None节点来保存
+
+
+#### 锯齿形层序遍历
+
+[103. 二叉树的锯齿形层序遍历 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-tree-zigzag-level-order-traversal/description/)
+
+即在层序遍历时第一层pop最左端的元素，第二层先pop最右端的元素，依次类推，事实上只需要改变向结果中添加元素的顺序即可。
+
+```python
+def zigzagLevelOrder(root: Optional[TreeNode]) -> List[List[int]]:
+	if root is None:
+		return []
+	queue = deque()
+	queue.append(root)
+	flag = True
+	res = []
+	while queue:
+		sz = len(queue)
+		level = []
+		for _ in range(sz):
+			node = queue.popleft()
+			if flag:
+				level.append(node.val)
+			else:
+				level = [node.val] + level
+			if node.left:
+				queue.append(node.left)
+			if node.right:
+				queue.append(node.right)
+		res.append(level)
+		flag = not flag
+	return res
+```
+
+
+
+### 二叉树中的最大路径和
+
+[124. 二叉树中的最大路径和 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
+
+使用递归解决这个问题，最大路径和为一个节点和其左右子树的最大子树和相加（前提是子树和大于0）
+
+对于一颗子树而言，子树和的最大值为根节点加上左子树的最大和，或者加上右子树的最大和，或者不加，左右子树只能加一个，否则会出现多条路径。递归函数返回的是最大子树和
+
+```python
+def solve(root):
+    def _solve(root, res):
+        if root is None:
+            return 0
+
+        l_val = _solve(root.left, res)
+        r_val = _solve(root.right, res)
+        maxSubtreeSum = max(root.val + max(l_val, r_val, 0), 0)  # 最大子树和
+        maxPathSum = root.val + l_val + r_val  # 最大路径和
+        res[0] = max(res[0], maxPathSum)
+        return maxSubtreeSum
+    
+    res = [-10000]
+    _solve(root, res)
+    return res[0]
+```
+
+
+
+### 二叉树的最大宽度
+
+[662. 二叉树最大宽度 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-width-of-binary-tree/description/)
+
+该题也会计算None节点，所以需要考虑节点的位置，左节点 2 * i，右节点 2 * i+1
+
+```python
+def solve(root):
+    queue = []
+    queue.append((root, 0))
+    max_size = len(queue)
+
+    while queue:
+        sz = len(queue)
+        # max_size = max(max_size, sz)
+        lidx = queue[0][1]
+        ridx = lidx
+        for i in range(sz):
+            node, ridx = queue.pop(0)
+            # if node:
+            if node.left:
+                queue.append((node.left, 2 * ridx))
+            if node.right:
+                queue.append((node.right, 2 * ridx + 1))
+        max_size = max(max_size, ridx - lidx+1)
+    return max_size
+```
+
+
+### 最近公共祖先
+
+[236. 二叉树的最近公共祖先 - 力扣（LeetCode）](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/description/)
+
+采用递归方法，分别在左子树和右子树中寻找p和q，如果左右子树都能找到，那么该节点就是最近公共祖先，如果在左子树找到p或q，右子树没有找到，返回的结果就是p或q，即p或q自己就是最近公共祖先
+
+```python
+def solve(root, p, q):
+    if root is None or root == p or root == q:
+        return root
+    
+    left = solve(root.left, p, q)
+    right = solve(root.right, p, q)
+
+    if left and right:
+        return root
+    
+    if left and right is None:
+        return left
+    
+    if left is None and right:
+        return right
+```
+
+
+
+
+### 对称树
+
+[101. 对称二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/symmetric-tree/description/)
+
+用DFS，判断左右节点是否相等，如果相等判断左节点的左子树和右节点的右子树是否相等。
+
+```python
+def solve(root: TreeNode):
+    
+    def dfs(left, right):
+        if left is None and right is None:
+            return True
+        if left and right:
+            if left.val == right.val:
+                return dfs(left.left, right.right) and dfs(left.right, right.left)
+        return False
+    
+    res = dfs(root.left, root.right)
+    return res
+```
+
+
+### 平衡树
+
+[110. 平衡二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/balanced-binary-tree/description/)
+
+使用DFS获取左右子树的高度，需要注意的是dfs返回的是左右子树高度的较大值
+
+```python
+def solve(root):
+    def dfs(node, res):
+        if node is None:
+            return 0
+        left_height = 1 + dfs(node.left, res)
+        right_height = 1 + dfs(node.right, res)
+        if abs(left_height - right_height) > 1:
+            res[0] = False
+        return max(left_height, right_height)
+        
+    res = [True]
+    dfs(root, res)
+    return res[0]
+```
+
+
+### 翻转二叉树
+
+[226. 翻转二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/invert-binary-tree/description/)
+
+每次交换左右子树即可，注意是直接交换左右子树，而不是左右子树的值
+
+```python
+def solve(root):
+    def dfs(root):
+        if root is None: return
+        root.left, root.right = root.right, root.left
+        if root.left:
+            dfs(root.left)
+        if root.right:
+            dfs(root.right)
+    dfs(root)
+```
+
+
+
+### 已知中序遍历和后序遍历确定前序遍历
+
+后序遍历的最后一个元素是根节点，这样可以在中序遍历的结果中确定根节点的位置，从而分出左右子树，根据左右子树的长度可以找到后序遍历的左右子树，分别对左右子树确定根节点的位置，重复这一步骤，得到前序遍历的结果。
+
+```python
+def solve(postr, inr):
+
+    def _solve(postr, inr, res):
+	    # 处理非完全二叉树
+        if len(postr) == 0 or len(inr) == 0:
+            return
+        if len(postr) == 1:
+            res.append(postr[0])
+            return
+        root = postr[-1]
+        ridx = inr.index(root)   # 为了节约时间，可以先用一个字典保存每个元素的位置
+        in_left = inr[:ridx]
+        in_right = inr[ridx+1:]
+        post_left = postr[:len(in_left)]
+        post_right = postr[len(in_left):-1]
+        res.append(root)
+        _solve(post_left, in_left, res)   # 遍历左子树
+        _solve(post_right, in_right, res)  # 遍历右子树
+    ans = []
+    _solve(postr, inr, ans)
+    print(ans)
+```
+
+直接构建二叉树见 [105. 从前序与中序遍历序列构造二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)
+
+
+### 二叉树展开为链表
+
+[114. 二叉树展开为链表 - 力扣（LeetCode）](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/description/)
+
+要求链表还使用树节点实现，left始终为None，按照先序遍历的顺序排列
+
+类似先序遍历的实现，只不过将原本的打印字符改为了链表构建
+
+```python
+def flatten(self, root):
+	dummy = TreeNode(-1)
+	self.prev = dummy
+
+	def flat(root):
+		if root is None:
+			return
+		left = root.left    # 保存左子树
+		right = root.right  # 保存右子树
+		root.left = None
+		self.prev.right = root
+		self.prev = root
+
+		flat(left)
+		flat(right)
+	flat(root)
+	return dummy.right
+```
+
+
+### 二叉搜索树和双向链表
+
+[LCR 155. 将二叉搜索树转化为排序的双向链表 - 力扣（LeetCode）](https://leetcode.cn/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/description/)
+
+用一个DFS来中序遍历树
+
+```python
+def treeToDoublyList(self, root):
+	if root is None:
+		return None
+	self.head = None # 最小的元素
+	self.prev = None
+	def dfs(root):
+
+		if root is None:
+			return
+		dfs(root.left)
+		if self.prev is None:
+			self.head = root
+		else:
+			self.prev.right = root   # 处理左子树和根节点之间指针
+			root.left = self.prev    # 处理右子树和根节点之间指针
+		
+		self.prev = root
+		dfs(root.right)
+	
+	dfs(root)
+	self.head.left = self.prev    # 此处的head是最小的元素
+	self.prev.right = self.head   # 此处的prev是最大的元素
+
+	return self.head
+```
 
 
 ### 二叉树的插入和删除
@@ -6607,18 +7658,15 @@ def InsertNode(root, data):
             return root
 ```
 
-
 删除：首先找到这个节点，将这个节点的值换成最深的节点的值，然后删除这个最深的节点，下面的代码是删除最深的节点
 
 ```python
 def delete_deepest(root, dNode):
     queue = [root]
-
     while queue:
         curr = queue.pop(0)
 
-        # If current node is the deepest 
-        # node, delete it
+        # If current node is the deepest node, delete it
         if curr == dNode:
             curr = None
             del dNode
@@ -6627,8 +7675,7 @@ def delete_deepest(root, dNode):
         # Check the right child first
         if curr.right:
           
-            # If right child is the deepest
-            # node, delete it
+            # If right child is the deepest node, delete it
             if curr.right == dNode:
                 curr.right = None
                 del dNode
@@ -6637,9 +7684,7 @@ def delete_deepest(root, dNode):
 
         # Check the left child
         if curr.left:
-          
-            # If left child is the deepest
-            # node, delete it
+            # If left child is the deepest node, delete it
             if curr.left == dNode:
                 curr.left = None
                 del dNode
@@ -6652,26 +7697,115 @@ def delete_deepest(root, dNode):
 
 [Subtree with given sum in a Binary Tree - GeeksforGeeks](https://www.geeksforgeeks.org/subtree-given-sum-binary-tree/)
 
+采用递归的方法，每次对当前节点计算一次子树之和，如果等于目标值则有解，否则对左右子树分别计算。
+
+注意：这里不需要额外对左右子树进行计算，因为在用递归计算当前子树之和时，递归中已经计算了左右子树之和，如果等于目标就有解了
+
 ```python
-# foundSum 用数组保存结果
-def subtreeSum(root, foundSum, target):
-  
-    # Base case: If the node is NULL, return 0
+# res 用数组保存结果
+def subtreeSum(root, res, target):
     if root is None:
         return 0
-
-    # Calculate the sum of the current subtree
+	# 计算子树的和
     currentSum = (root.data +
-                  subtreeSum(root.left, foundSum, target) +
-                  subtreeSum(root.right, foundSum, target))
+                  subtreeSum(root.left, res, target) +
+                  subtreeSum(root.right, res, target))
 
-    # If the current subtree sum matches the target,
-    # set foundSum to True
+    # 子树之和等于目标值，则有解
     if currentSum == target:
-        foundSum[0] = True
-
-    # Return the current subtree sum
+        res[0] = True
+        
     return currentSum
+```
+
+### 验证二叉搜索树
+
+[98. 验证二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/validate-binary-search-tree/description/)
+
+有两种解法，第一种解法使用递归，对于二叉树而言，其根节点的值大于左子树中的最大值，小于右子树中的最小值。但是我们不可能每次都计算一下左子树的最大值和右子树的最小值，一种方法是传入两个节点表示目前根节点的所能处于的范围，如对于左子树而言，其根节点的值要小于父节点的值，而右子树的根节点则要大于父节点的值
+
+```python
+def solve(root):
+    def dfs(root, maxNode, minNode):
+        if root is None:
+            return True
+        if maxNode is not None and maxNode.val <= root.val:
+            return False
+        if minNode is not None and minNode.val >= root.val:
+            return False
+        # 对于左子树而言，上限为父节点，右子树的下限为父节点
+        return dfs(root.left, root, minNode) and dfs(root.right, maxNode, root)
+    
+    res = dfs(root, None, None)
+    return res
+```
+
+
+另一种解决该问题的方法是先中序遍历树，对于二叉搜索树而言，中序遍历的结果是递增的，如果中序遍历的结果非递增，则证明不是二叉搜索树。
+
+>如果需要找到二叉搜索树中第 k 大的数，有这样的解法，使用中序遍历的倒序获得从大到小的排列，在遍历如果发现已经找到第k大的数时停止后续的迭代
+
+
+```python
+def findTargetNode(self, root: Optional[TreeNode], cnt: int) -> int:
+	def inorder(root):
+		if root is None:
+			return
+		inorder(root.right)   # 先访问右子树
+		if self.cnt == 0: return   # 避免后续的遍历
+		self.cnt -= 1
+		if self.cnt == 0: self.res = root.val
+		inorder(root.left)
+	self.cnt = cnt
+	self.res = 0
+	inorder(root)
+	return self.res
+```
+
+
+### 二叉搜索树的删除
+
+[450. 删除二叉搜索树中的节点 - 力扣（LeetCode）](https://leetcode.cn/problems/delete-node-in-a-bst/)
+
+注意需要传入父节点，以及子节点在父节点的左子树还是右子树，否则无法更新
+
+删除时分两种情况（也可以分为三种），如果没有右子树，父节点的后续节点为左子树
+
+如果存在右子树，需要将左子树连接到右子树的最小值的左子树
+
+```python
+def deleteNode(root, key):
+
+    def delete(parent, root, key, left):
+        if root is None:
+            return
+        
+        if root.val > key:
+            delete(root, root.left, key, 1)
+        elif root.val < key:
+            delete(root, root.right, key, 0)
+        else:
+            if root.right is None:
+                if left:
+                    parent.left = root.left
+                else:
+                    parent.right = root.left
+                del root
+            else:
+                rl = root.right
+                while rl.left is not None:
+                    rl = rl.left
+                
+                rl.left = root.left
+                if left:
+                    parent.left = root.right
+                else:
+                    parent.right = root.right
+                del root
+    dummy = TreeNode(-10000000)  # 处理删除根节点时的情况
+    dummy.left = root
+    delete(dummy, root, key, 1)
+    return dummy.left
 ```
 
 
@@ -6679,43 +7813,27 @@ def subtreeSum(root, foundSum, target):
 
 [Check whether a given Binary Tree is Complete or not (Iterative Solution) - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-given-binary-tree-is-complete-tree-or-not/)
 
-完全二叉树指除了最后一层，其它层全部填满，并且最后一层优先填充左子树。即如果左子树有，那么右子树也必定有
+[958. 二叉树的完全性检验 - 力扣（LeetCode）](https://leetcode.cn/problems/check-completeness-of-a-binary-tree/description/)
 
+完全二叉树指除了最后一层，其它层全部填满，并且最后一层优先填充左子树。即如果左子树有，那么右子树也必定有。
+
+这里可以用两个变量保存前一个节点和当前节点，如果当前节点不为None，但是前一个节点为None，证明要么有左子树，但是没有右子树，要么没有右子树，但是有左子树
 
 ```python
-def is_complete_binary_tree(root):
-    if root is None:
-        return True
-
-    q = deque([root])
-    end = False 
-
-    while q:
-        current = q.popleft()
-
-        # Check left child
-        if current.left:
-            if end:
-                return False
-            q.append(current.left)
-        else:
-          
-            # If left child is missing,
-            # mark the end
-            end = True
-
-        # Check right child
-        if current.right:
-            if end:
-                return False
-            q.append(current.right)
-        else:
-          
-            # If right child is missing, 
-            # mark the end
-            end = True
-
-    return True 
+def isCompleteTree(root) -> bool:
+	queue = deque()
+	queue.append(root)
+	prev = root
+	curr = None
+	while len(queue) > 0:
+		curr = queue.popleft()
+		if curr is not None and prev is None:
+			return False
+		if curr is not None:
+			queue.append(curr.left)
+			queue.append(curr.right)
+		prev = curr
+	return True
 ```
 
 
