--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -2852,7 +2852,7 @@ def patCount(txt, pat):
 
 #### 回溯法
 
-对于两个字符串 txt 和 pat，从前到后，如果`txt[i+1]=pat[j+1]`，那么考虑`i+1` 之后的txt和 `j+1` 之后pat 以及 `i+1` 之后的txt和`j` 之后的pat
+对于两个字符串 txt 和 pat，从前到后，如果`txt[i+1]=pat[j+1]`，那么考虑 `i+1` 之后的 txt 和 `j+1` 之后pat 以及 `i+1` 之后的 txt 和 `j` 之后的 pat
 
 ```python
 def count(txt, pat, i, j, n1, n2):
@@ -2863,7 +2863,6 @@ def count(txt, pat, i, j, n1, n2):
     
     if txt[i+1] == pat[j+1]:
         return count(txt, pat, i + 1, j+1, n1, n2) + count(txt, pat, i + 1, j, n1, n2)
-    
     return count(txt, pat, i+1, j, n1, n2)
 
 count(txt, pat, -1, -1, n1, n2)   # 注意从-1开始
@@ -2879,12 +2878,12 @@ def subCountRec(i, j, txt, pat):
     if i == 0:    # 如果 txt 已经匹配完了 
         return 0
 
-    if txt[i - 1] == pat[j - 1]:
+    if txt[i-1] == pat[j-1]:
         return subCountRec(i - 1, j - 1, txt, pat) \
           + subCountRec(i - 1, j, txt, pat)
 
     return subCountRec(i - 1, j, txt, pat)
-subCountRec(0, 0, txt, pat)
+subCountRec(len(txt), len(pat), txt, pat)
 ```
 
 
@@ -2896,8 +2895,7 @@ def countSubsequences(i, j, pat, txt, memo):
         return 1 
     if j == 0:
         return 0 
-
-    # If already computed, return the result
+        
     if memo[i][j] != -1:
         return memo[i][j]
 
@@ -2915,7 +2913,6 @@ def countSubsequences(i, j, pat, txt, memo):
 def findSubsequencecount(txt, pat):
     m, n = len(pat), len(txt)
 
-    # pat can't appear as a subsequence in txt
     if m > n:
         return 0
 
@@ -2928,43 +2925,34 @@ def findSubsequencecount(txt, pat):
 
 #### 动态规划
 
+从前到后，令 `dp[i][j]` 为 `txt[:i+1]` 和 `pat[:j+1]` 之间的匹配数
+
+如果 `txt[i]==pat[j]`，则考虑匹配 `txt[:i]` 和 `pat[:j+1]` 以及 `txt[:i]` 和 `pat[:j]`
+
+如果 `txt[i]!=pat[j]`，则考虑匹配 `txt[:i]` 和 `pat[:j+1]`
+
+
 ```python
-def find_subsequence_count(txt, pat):
-    m = len(pat)
-    n = len(txt)
-
-    # pat can't appear as a subsequence
-    # in txt
-    if m > n:
-        return 0
-
-    # Create a 2D list initialized with 0
-    dp = [[0] * (n + 1) for _ in range(m + 1)]
-
-    # Initializing first row with all 1s. An empty string
-    # is a subsequence of all.
-    for j in range(n + 1):
-        dp[0][j] = 1
-
-    # Fill mat[][] in bottom-up manner
-    for i in range(1, m + 1):
-        for j in range(1, n + 1):
-          
-            # If last characters don't match, then value
-            # is the same as the value without the last character in txt.
-            if pat[i - 1] != txt[j - 1]:
-                dp[i][j] = dp[i][j - 1]
-            else:
-              
-                # Value is obtained considering two cases:
-                # a) All substrings without last character in txt
-                # b) All substrings without last characters in both.
-                dp[i][j] = (dp[i][j - 1] + dp[i - 1][j - 1])
-
-    return dp[m][n]
+def numDistinct(txt: str, pat: str) -> int:
+	n1 = len(txt)
+	n2 = len(pat)
+	cnt = 0
+	dp = [[0 for _ in range(n2)] for _ in range(n1)]
+	p0nums = 0
+	for i in range(n1):  # 初始化 pat[0] 在txt中的匹配次数
+		if txt[i] == pat[0]:
+			p0nums += 1
+		dp[i][0] = p0nums
+	# 
+	for i in range(1, n1):
+		for j in range(1, n2):
+			if txt[i] == pat[j]:
+				dp[i][j] = dp[i-1][j] + dp[i-1][j-1]
+			else:
+				dp[i][j] = dp[i-1][j]
+	
+	return dp[-1][-1]
 ```
-
-
 
 
 ## 双指针
@@ -10340,6 +10328,39 @@ def solve_dp(arr, target):
 ```
 
 
+### 最长回文子序列
+
+[516. 最长回文子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-palindromic-subsequence/description/)
+
+注意子序列可以不连续，只要维持原来的顺序即可
+
+令 `dp[i][j]` 为 `[i, j]` 长度内最长回文子序列的长度，那么有如下结论
+
+若 `s[i]==s[j]`，则有 `dp[i][j] = dp[i+1][j-1]+2`
+
+若 `s[i]!=s[j]`，则有 `dp[i][j] = max(dp[i+1][j], dp[i][j-1])`
+
+注意初始化条件时，只能给 `0≤i≤j<n` 时的 `dp[i][j]` 赋值为1，其它都应该为0，由于 `i<j` 后面会计算，所以只需要给 `i=j` 时赋值为1 
+
+```python
+def longestPalindromeSubseq(s: str) -> int:
+	n = len(s)
+	dp = [[0 for _ in range(n)] for _ in range(n)]
+	for i in range(n-1, -1, -1):
+		dp[i][i] = 1
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				dp[i][j] = dp[i+1][j-1] + 2
+			else:
+				dp[i][j] = max(dp[i+1][j], dp[i][j-1])
+	return dp[0][-1]
+```
+
+
+还有另一种方法，将字符串翻转过来，求两个字符串之间的最长公共子序列。
+
+
+
 ### 乘积最大子数组
 
 [152. 乘积最大子数组 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-product-subarray/description/)
@@ -10487,7 +10508,7 @@ def cutRod(price):
 
 带权重的爬楼问题 [Minimum cost to reach the top of the floor by climbing stairs - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-cost-to-reach-the-top-of-the-floor-by-climbing-stairs/)
 
-`s[n] = cost[n] + min(s[n-1)+s[n-2])`
+`s[n] = cost[n] + min(s[n-1), s[n-2])`
 
 ```python
 def solve(cost):
@@ -10532,8 +10553,7 @@ def count_dp(coins, sum):
 
 [Longest Common Subsequence (LCS) - GeeksforGeeks](https://www.geeksforgeeks.org/longest-common-subsequence-dp-4/)
 
-
-一般来说如果递归用的是从后向前，那么动态规划便是从前到后。
+令 `dp[i][j]` 为 `s1[...i]` 和 `s2[...j]` 之间的最长公共子序列的长度，如果 `s1[i]==s2[j]`，那么加1，否则取较大值
 
 ```python
 def lcs_dp(s1, s2):
@@ -10568,6 +10588,38 @@ def lcs_dp2(s1, s2):
                 dp[j] = max(dp[j-1], dp[j])
             prev = temp
     return dp[n2]
+```
+
+
+### 两个字符串的最小ASCII删除和
+
+[712. 两个字符串的最小ASCII删除和 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-ascii-delete-sum-for-two-strings/description/)
+
+参考最长公共子字符串的求法
+
+`dp[i][j]` 为 `s1[...i]` 和 `s2[...j]` 之间的删除和
+
+```python
+def minimumDeleteSum(s1: str, s2: str) -> int:
+	res = []
+	n1 = len(s1)
+	n2 = len(s2)
+	dp = [[0 for i in range(n2+1)] for _ in range(n1+1)]
+	res = [[0 for i in range(n2+1)] for _ in range(n1+1)]
+
+	for i in range(1, n2+1):
+		dp[0][i] = dp[0][i-1] + ord(s2[i-1])
+	for i in range(1, n1+1):
+		dp[i][0] = dp[i-1][0] + ord(s1[i-1])
+	
+	for i in range(1, n1+1):
+		for j in range(1, n2+1):
+			if s1[i-1] == s2[j-1]:
+				dp[i][j] = dp[i-1][j-1]
+			else:
+			# 选择删除s1中第i-1个字符，或者删除 s2 中第j-1个字符
+				dp[i][j] = min(dp[i-1][j] + ord(s1[i-1]), dp[i][j-1] + ord(s2[j-1]))
+	return dp[n1][n2]
 ```
 
 
@@ -10841,7 +10893,7 @@ def solve(k, r, c):
 
 对于每一位元素，都检查之前的元素，如果比之前的元素`arr[j]`大，就取`1+arr[j]`
 
-`dp[i]` 表示第 i 个点大于之前的点的数量
+`dp[i]` 表示第 i 个点大于之前的点的数量，即包含第 i 个点的最大增长子序列
 
 ```python
 def solve(arr):
@@ -10873,6 +10925,40 @@ def solve(nums):
             lb = bisect_left(stack, nums[i])
             stack[lb] = nums[i]
     return len(stack)
+```
+
+
+
+### 最长递增子序列的个数
+
+[673. 最长递增子序列的个数 - 力扣（LeetCode）](https://leetcode.cn/problems/number-of-longest-increasing-subsequence/description/)
+
+用一个数组统计当前最长递增子序列的个数
+
+```python
+def findNumberOfLIS(nums: List[int]) -> int:
+	from collections import defaultdict
+	n = len(nums)
+	dp = [1] * n
+	cnt = [0] * n
+	maxv = 1
+	ans = 0
+	for i in range(n):
+		cnt[i] = 1
+		for j in range(i):
+			if nums[j] < nums[i]:
+				if dp[j] + 1 > dp[i]:  # 最长子序列需要更新
+					dp[i] = dp[j] + 1
+					cnt[i] = cnt[j]
+				elif dp[j] + 1 == dp[i]:
+					cnt[i] += cnt[j]
+		# 在之前的部分完成遍历后再更新结果
+		if dp[i] > maxv:  
+			maxv = dp[i]
+			ans = cnt[i]
+		elif dp[i] == maxv:
+			ans += cnt[i]
+	return ans
 ```
 
 
@@ -11139,6 +11225,165 @@ def minimizeTime(curr, n, arr, k):
         res = min(res, maxTime)
 
     return res
+```
+
+
+### 美丽子集的数目
+
+[2597. 美丽子集的数目 - 力扣（LeetCode）](https://leetcode.cn/problems/the-number-of-beautiful-subsets/description/)
+
+在一个集合中找到子集，子集中的所有元素之间差距不等于k，求出所有不同的子集数量（索引不同即认为不同）
+
+如果集合中的数比较少的话，可以直接暴力求解，先通过二进制mask的方式求出所有可能的子集，然后验证每个子集是否可行。这种方法耗时很长
+
+```python
+def beautifulSubsets(nums, k: int) -> int:
+	n = len(nums)
+	cnt = 0
+	for mask in range(1, 1 << n):
+		arr = [nums[i] for i in range(len(nums)) if (mask >> i) & 1==1]
+		flag = False
+		for i in range(len(arr)):
+			for j in range(i+1, len(arr)):
+				if abs(arr[i] - arr[j]) == k:
+					flag = True
+					break
+			if flag:
+				break
+		if not flag:
+			cnt += 1
+	return cnt
+```
+
+
+使用回溯法，同时用一个字典保存可以选择的元素
+
+```python
+def beautifulSubsets(self, nums: List[int], k: int) -> int:
+	n = len(nums)
+	self.ans = 0
+	cnt = {}  # 保存当前选择的元素
+	def dfs(idx):
+		if idx == n:
+			return
+		dfs(idx+1) # 不选择当前元素
+		# 当前元素可选时
+		if cnt.get(nums[idx] - k, 0) == 0 and cnt.get(nums[idx]+k, 0) == 0:
+			cnt[nums[idx]] = cnt.get(nums[idx], 0) + 1
+			dfs(idx+1)
+			self.ans += 1 # 可以找到一个子集合
+			cnt[nums[idx]] -= 1
+		
+	dfs(0)
+	return self.ans
+```
+
+
+最后介绍一下动态规划的方法
+
+首先将每个数根据模 k 的结果进行分组，如果模k不同余，那么一定不相差k，将这些分组好之后，每组之间不会相差k，所以只需要考虑组内元素的选择方法，然后将这些组的选择方法相乘即可。
+
+对于一个组内的元素，将其排序去重后，只需要考虑相邻元素不能同时选取，令 `f(i,0)` 表示第 `i` 个元素不加入子集，`f(i,1)` 表示第`i`个元素加入子集，则有 
+
+当不选择第 `i` 个元素：`f(i, 0)=f(i-1, 0)+f(i-1,1)`
+
+当选择第 `i` 个元素，由于只要索引不同，就认为是不同的子集，所以如果第 `i` 个元素有 $c_i$个相同的值，那么可选择的子集合数为 $2^{c_i}-1$
+
+如果第 `i` 个元素和第 `i - 1` 个元素相差不为 k，则有
+
+$$
+f(i,1) = \left( {f(i - 1,0) + f(i - 1,1)} \right)*\left( {{2^{{c_i}}} - 1} \right)
+$$
+
+反之如果相差为 k，则有
+
+$$
+f(i,1) = f(i - 1,0)*\left( {{2^{{c_i}}} - 1} \right)
+$$
+```python
+def beautifulSubsetsdp(nums, k: int) -> int:
+	from collections import defaultdict
+	n = len(nums)
+	ans = 1
+	groups = defaultdict(list)
+	cnt = defaultdict(int)
+	for n in nums:
+		rem = n % k
+		if n not in groups[rem]:
+			groups[n % k].append(n)
+		cnt[n] += 1
+	for key in groups.keys():
+		arr = sorted(groups[key])
+		n1 = len(arr)
+		dp = [[0, 0] for _ in range(n1)]
+		dp[0][0] = 1  # 空集合
+		dp[0][1] = 2 ** (cnt[arr[0]]) - 1 # 选择第一个元素
+		for i in range(1, n1):
+			dp[i][0] = dp[i-1][0] + dp[i-1][1]
+			if arr[i] - arr[i-1] == k:
+				dp[i][1] = dp[i-1][0] * (2 ** cnt[arr[i]] - 1)
+			else:
+				dp[i][1] = (dp[i-1][0] + dp[i-1][1]) * (2 ** cnt[arr[i]] - 1)
+		ans *= dp[n1-1][1] + dp[n1-1][0]
+
+	return ans - 1   # 去除空集
+```
+
+
+### 删除并获得点数
+
+[740. 删除并获得点数 - 力扣（LeetCode）](https://leetcode.cn/problems/delete-and-earn/description/)
+
+给定一个整数数组，可以对其中的一个元素 `num[i]` 删除，并且获得 `num[i]` 点分数，但是同时会默认删除 `num[i]-1` 和 `num[i]+1`，默认删除不会获得分数，请问怎么操作能使获得的分数最大。
+
+该问题可以转换为打家劫舍问题，即删除了 `num[i]` 就不能删除 `num[i]` 两边的元素，因此，可以先找到原数组的最大值，然后计算每个值在 `num`中出现的总和，这样形成的新数组可以按照打家劫舍的方法求解
+
+```python
+def deleteAndEarn(nums) -> int:
+	maxv = max(nums)
+
+	arrs = [0] * (maxv+1)
+	for n in nums:
+		arrs[n] += n
+	# 打家劫舍问题的求解方法
+	f0 = arrs[0]
+	f1 = max(arrs[0], arrs[1])
+	for i in range(2, len(arrs)):
+		f2 = max(f1, f0 + arrs[i])
+		f0, f1 = f1, f2
+	return f1
+```
+
+
+另一种方法是先排序，然后从最小的开始遍历，维持一个相邻元素差距等于1的数组，当出现更大的元素时，对该数组按照打家劫舍问题进行求解，然后重置该数组，相当于把数组分割为若干个连续的数组。
+
+```python
+def deleteAndEarn(nums: List[int]) -> int:
+	nums.sort()
+	n = len(nums)
+	def rob(arr):
+		if len(arr) == 0: return 0
+		if len(arr) == 1: return arr[0]
+		f0, f1 = arr[0], max(arr[0], arr[1])
+
+		for i in range(2, len(arr)):
+			f2 = max(f0+arr[i], f1)
+			f0, f1 = f1, f2
+		return f1
+	
+	res = 0
+	arr = [nums[0]]
+	for i in range(1, n):
+		v = nums[i]
+		if v == nums[i-1]:  
+			arr[-1] += v    # 更新删除该元素所能获得的点数
+		elif v == nums[i-1] + 1:  # 相邻元素差距为1，将其加入 arr中
+			arr.append(v)
+		else:   # 出现更大的元素，对 arr 进行求解
+			res += rob(arr)
+			arr = [v]
+	res += rob(arr)
+	return res
 ```
 
 
